--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
-	@@ -7,104 +8,121 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -125,7 +124,7 @@
                         </tr>
                     </thead>
                     <tbody>
-	@@ -115,19 +133,19 @@ <h1 class="display-4">
+			 <h1 class="display-4">
                             <td>Турецкий ван</td>
                             <td>Турция</td>
                             <td>50 000 - 93 000</td>
@@ -145,7 +144,7 @@
                         </tr>
                         <tr>
                             <td colspan="4">Shorthair</td>
-	@@ -136,21 +154,21 @@ <h1 class="display-4">
+			 <h1 class="display-4">
                             <td>Русская голубая кошка</td>
                             <td>Россия</td>
                             <td>23 000 - 28 000</td>
@@ -167,7 +166,7 @@
                 <div class="form-group col">
                     <div class="form-group">
                         <label for="fio">ФИО:</label>
-	@@ -167,9 +185,9 @@ <h1 class="display-4">
+		 <h1 class="display-4">
                     <div class="input-group mb-3">
                         <input type="text" class="form-control" placeholder="Введите email">
                         <div class="input-group-append">
@@ -177,7 +176,7 @@
 
                     <div class="form-group">
                         <label for="data">Дата рождения:</label>
-	@@ -179,9 +197,11 @@ <h1 class="display-4">
+		 <h1 class="display-4">
                     <br>Пол:<br>
 
                     <div class="form-check form-check-inline">
@@ -189,7 +188,7 @@
                         <label class="form-check-label" for="Men_radio">Мужской</label>
                     </div>
 
-	@@ -204,45 +224,46 @@ <h1 class="display-4">
+		 <h1 class="display-4">
 
                     <div class="input-group">
                         <div class="input-group-prepend">
