--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                         </tr>
                     </thead>
                     <tbody>
-			 <tr class="display-4">
+			 <tr class="">
                             <td>Турецкий ван</td>
                             <td>Турция</td>
                             <td>50 000 - 93 000</td>
@@ -144,7 +144,7 @@
                         </tr>
                         <tr>
                             <td colspan="4">Shorthair</td>
-			 <tr class="display-4">
+			 <tr class="">
                             <td>Русская голубая кошка</td>
                             <td>Россия</td>
                             <td>23 000 - 28 000</td>
