--- a/index.html
+++ b/index.html
@@ -166,7 +166,6 @@
                 <div class="form-group col">
                     <div class="form-group">
                         <label for="fio">ФИО:</label>
-		 <h1 class="display-4">
                     <div class="input-group mb-3">
                         <input type="text" class="form-control" placeholder="Введите email">
                         <div class="input-group-append">
@@ -176,7 +175,6 @@
 
                     <div class="form-group">
                         <label for="data">Дата рождения:</label>
-		 <h1 class="display-4">
                     <br>Пол:<br>
 
                     <div class="form-check form-check-inline">
@@ -188,8 +186,7 @@
                         <label class="form-check-label" for="Men_radio">Мужской</label>
                     </div>
 
-		 <h1 class="display-4">
-
+		 <div class="">
                     <div class="input-group">
                         <div class="input-group-prepend">
                             <span class="input-group-text">Биография</span>
