--- a/second_page.html
+++ b/second_page.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
+
 <head>
-    <link href="second_style.css" rel="stylesheet" type="text/css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Second page</title>
-    <link rel="shortcut icon" href="icon.ico" type="image/x-icon">
+    <title>My project</title>
 </head>
-
 <body>
-    <div class="main">
-        <li><a href = "index.html" target="_blank"><img width ="250" src="image_second.jpg" alt="Картинка"></a></li>
-    </div>
+    <h2>Коты часто страдают непереносимостью лактозы. Не давайте им молоко 🙂</h2>
 </body>
 </html>
